# vim_conf

./: .vimrc
.local/lib/: fipscanister.o.sha1  libcrypto.la  libcurl.la  libcurl.so.4.5.0  librdkafka++.so.1  libssl.la  libssl.so.47.0.6  libtls.la  libtls.so.19  libtls.so.19.0.7
.local/lib/pkgconfig/: libcrypto.pc  libcurl.pc  libssl.pc  libtls.pc  openssl.pc  rdkafka++-static.pc  rdkafka++.pc  rdkafka-static.pc  rdkafka.pc
.local/libmaxminddb/: CMakeLists.txt
.local/libmaxminddb/include/: GeoLite2PP_version.hpp
.local/libmaxminddb/lib/: libmaxminddb.la  libmaxminddb.so.0.0.7
.local/libmaxminddb/lib/pkgconfig/: libmaxminddb.pc
.local/share/man/man1/: evim.1  vim.1  vimtutor.1
.local/ssl/man/man1/: CA.pl.1  asn1parse.1  c_rehash.1  ca.1  ciphers.1  cms.1  crl.1  crl2pkcs7.1  dgst.1  dhparam.1  dsa.1  dsaparam.1  ec.1  ecparam.1  enc.1  errstr.1  gendsa.1  genpkey.1  genrsa.1  nseq.1  ocsp.1  openssl.1  passwd.1  pkcs12.1  pkcs7.1  pkcs8.1  pkey.1  pkeyparam.1  pkeyutl.1  rand.1  req.1  rsa.1  rsautl.1  s_client.1  s_server.1  s_time.1  sess_id.1  smime.1  speed.1  spkac.1  (+5 more)
.local/ssl/man/man3/: ASN1_OBJECT_new.3  ASN1_STRING_length.3  ASN1_STRING_new.3  ASN1_STRING_print_ex.3  ASN1_TIME_set.3  ASN1_generate_nconf.3  BIO_ctrl.3  BIO_f_base64.3  BIO_f_buffer.3  BIO_f_cipher.3  BIO_f_md.3  BIO_f_null.3  BIO_f_ssl.3  BIO_find_type.3  BIO_new.3  BIO_new_CMS.3  BIO_push.3  BIO_read.3  BIO_s_accept.3  BIO_s_bio.3  BIO_s_connect.3  BIO_s_fd.3  BIO_s_file.3  BIO_s_mem.3  BIO_s_null.3  BIO_s_socket.3  BN_CTX_new.3  (+298 more)
.vim/: .VimballRecord  .netrwhist
.vim/doc/: tags
(+36 files in other folders)
